--- a/pop.html
+++ b/pop.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<form action="https://www.google.com" target="aa" method="get" onsubmit="setTimeout('p()',1200);">
+<form action="https://www.apple.com" target="aa" method="get" onsubmit="setTimeout('p()',1200);">
 
 <input type="submit">
 
@@ -19,7 +19,7 @@
 
 function p() {
 
-  var t = window.open('tel:10012','aa');
+  var t = window.open('tel:10010','aa');
 
 }
 
