--- a/x.html
+++ b/x.html
@@ -26,7 +26,7 @@ setTimeout(() => {
 // window.top.location = 'http://alesandroortiz.com/plaintext-top-nav';
 
 // PoC with simulated open redirect (not really open in PoC implementation)
-window.top.location = 'https://alesandroortiz.com/security/redir?r=https://example.com';
+window.top.location = 'https://alesandroortiz.com/security/redir?r=https:example.com';
 
 // PoC not implemented. This line is only a reminder of XSS-to-redirect method
 // window.top.location = 'https://alesandroortiz.com/sample-xss?xss=...redirect-via-js...';
