--- a/cal.html
+++ b/cal.html
@@ -1,1 +1,2 @@
-<iframe srcdoc="<a href=ms-calculator:>test</a>"></iframe>
+<!DOCTYPE html>
+<html> <body> <a href="javascript:alert(window.origin);"> <img title="example.com" src="https://i.imgur.com/qjUi3Z9.png"/> </a> </body> </html>
