--- a/or.html
+++ b/or.html
@@ -4,14 +4,7 @@
 <body>
   <script>
 
-    var blob = new Blob([
-      '<!DOCTYPE html><html><body>',
-      '<script>prompt("Google Login");<\/script>',
-      '</body></html>'
-    ], { type: 'text/html' });
-    var url = URL.createObjectURL(blob);
-
-    window.location.href = url;
+   prompt()
   </script>
 </body>
 </html>
