--- a/cal.html
+++ b/cal.html
@@ -1,2 +1,1 @@
-<!DOCTYPE html>
-<html> <body> <a href="javascript:alert(window.origin);"> <img title="example.com" src="https://i.imgur.com/qjUi3Z9.png"/> </a> </body> </html>
+<iframe srcdoc="<a href=tel:123>test</a>"></iframe>
