--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<a onclick="settimeout(function(){document.location='https://www.apple.com/contact/'}, 1)" href="https://github.com/orwagodfather/WordList/archive/refs/heads/main.zip">click here pleasek</a>
+<img src=x onerror=alert()>
