--- a/fdspoof.html
+++ b/fdspoof.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>RTLO Trick - vid.exe disguised as mp4</title></head>
+<head><title>RTLO Trick - vid.apk disguised as mp4</title></head>
 <body>
 <h2>Download File: Disguised as Video</h2>
 <button onclick="download()">Download 'vid.mp4'</button>
