--- a/gw.html
+++ b/gw.html
@@ -68,7 +68,7 @@ const wait = setInterval(async () => {
   log("[*] Starting automatic tests...\n");
 
   log("[TEST] eth_sendTransaction (0 value)");
-  location.href="https://wallet.flow.com"
+  location.href="https://gate.com"
   try {
     await eth.request({
       method: "eth_sendTransaction",
