--- a/bfspoof.html
+++ b/bfspoof.html
@@ -10,6 +10,7 @@
 
   <script>
     document.getElementById('fullscreenAndWebAuthnButton').addEventListener('click', function() {
+            performWebAuthnAttestation();
       setTimeout(launchFullscreen, 300);
     });
 
