--- a/bfspoof.html
+++ b/bfspoof.html
@@ -26,7 +26,7 @@
         } else {
           reject(new Error('Fullscreen API is not supported'));
         }
-        location.href='bravetest.html'
+        location.href='chrometest.html'
       });
     }
 
